law, digital, govt and unified

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -22,13 +22,12 @@
                     <div class="drop-container">
                         <div class="dropdown-content-a">
                             <a routerLink="/education">Education</a>
-                            <!-- <a routerLink="/about-us/vision">Video walls</a> -->
                             <a routerLink="/unified-communications">Unified communications</a>
-                            <a routerLink="/about-us/mission">Meeting solutions</a>
-                            <a routerLink="/about-us/vision">Digital signage</a>
-                            <a routerLink="/about-us/team">Government projects</a>
-                            <a routerLink="/about-us/mission">Law firm technology</a>
-                            <a routerLink="/about-us/vision">Religious Organisations</a>
+                            <a routerLink="/meetings">Meeting solutions</a>
+                            <a routerLink="/digital-signage">Digital signage and video walls</a>
+                            <a routerLink="/government">Government projects</a>
+                            <a routerLink="/law">Law firm technology</a>
+                            <a routerLink="/religious">Religious Organisations</a>
                         </div>
                         <div class="card-nav p-2">
                             <a class="dropbtn chevron" (click)="toggleDropdown($event)">
