--- a/src/app/modules/solutions/government/government.component.html
+++ b/src/app/modules/solutions/government/government.component.html
@@ -1,1 +1,308 @@
-<p>government works!</p>
+<div class="body">
+    <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <h1 class="hero-title pb-3">
+                    Government communication and video technology solutions
+                    .</h1>
+                        <p class="hero-p2 header-p pt-2">
+                            Proscene has a long history of working with local, state, and federal government departments and agencies. Our experienced teams understand your need for secure solutions and procurement proposals and procedures.
+                        </p>
+                       
+                <a routerLink="" class="demo-button">Discover solutions</a>
+            </div>
+            <img src="https://website2021-live-e3e78fbbd3cc41f2847799-7c49c59.divio-media.com/filer_public_thumbnails/filer_public/30/eb/30eb9913-5b2a-4ac7-9a8f-51d12bf11392/meeting-moderation.png__1200x630_q90_crop_subject_location-420%2C304_subsampling-2_upscale.png" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="explanation-after">
+        <h2 class="h2-offers text-center">
+            Our government collaboration solutions include:
+        </h2>
+        <div class=" pt-1 pb-1 ">
+            <a routerLink="" class=""> > State and local government agency solutions </a>
+        </div><div class=" pt-1 pb-1 ">
+            <a routerLink="" class=""> > Emergency operations centers and command and control centers </a>
+        </div><div class=" pt-1 pb-1 ">
+            <a routerLink="" class=""> > Local, state, and national education and government audio visual technology procurement contracts </a>
+        </div><div class=" pt-1 pb-1 ">
+        </div>
+    </div>
+    
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                State and local government agencies
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">When your state or local government agency is ready for a technology upgrade, you can partner with Proscene. Our teams provide collaboration technology and audio visual solutions that suit your needs. </p>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Capabilities include law enforcement and emergency response command and control centers, courtroom video conferencing, utility control centers, and more.</p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover solutions ></a>
+                </div>
+
+        </div>
+    </div>
+    
+    <div class="flex1">
+        
+        <div class="flex1-words wordsm ">
+            <h2 class="h2-offers">
+                Emergency operations centers
+            </h2>
+            <p class="pt-6  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;"> Proscene's design and engineering teams also deliver effective, secure emergency operation center (EOC) and command and control solutions. Facilities also include network operations centers, fusion centers, cybersecurity centers, dispatch centers, power/energy/gas operations centers, and more.</p>
+            <p class="pt-6  pb-1 width: 90%; padding-block p-solutions" style="padding-left: 0;">We’ll develop video meeting adoption and training plans and establish video conferencing meeting technology standards for activity-based work areas that encourage team collaboration.</p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
+                </div>
+
+        </div>
+        <div class="images flex1-words-p images-back2">
+            <img src="" alt="" srcset="">
+        </div>
+    </div>
+    <div class="partner-section">
+        <h3 class="h2-offers center pt-3 pb-4">We partner with leading collaboration providers
+        </h3>
+        <div class="partner-images pb-9">
+            <div class="container-p-img">
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="options">
+        <a routerLink="">
+            <div class="option1">
+                <div class="img-rooms room1"></div>
+                <p>Meeting rooms</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <div class="img-rooms room2"></div>
+                <p>Online meeting</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <div class="img-rooms room3"></div>
+                <p>Collaboration spaces</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <div class="img-rooms room4"></div>
+                <p>Classrooms</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <div class="img-rooms room5"></div>
+                <p>Boardrooms</p>
+            </div>
+        </a>
+        
+
+    </div>
+    <div class="offers">
+        <h2 class="h2-offers text-center">
+            AV integration for video meeting rooms, real and virtual
+        </h2>
+        <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">
+            An experienced AV integration partner like Proscene can deliver high-performing meeting room technology using your existing platforms and IT infrastructure while ensuring the audio and video systems perform flawlessly. In this process, we’ll quickly extend the functionality of your legacy voice and proprietary video technology.
+        </p>
+        <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">
+            Proscene shares your concerns about the impact of your technology investment on your organization and employee experience. We provide the solutions and <a href="">support</a> services that make sure your investment works as intended and to your team’s satisfaction.
+        </p>
+
+    </div>
+    <h2 class="h2-offers text-center">
+        Cloud-based, on-premise, and hybrid meeting solutions
+        </h2>
+    <div class="solutions">
+        <div class="cards-solutions">
+            <div class="card1 card1-1" >
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Cloud-Based</h5>
+                    <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Technology hosted on a secure, network and licensed to your users</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLink="" class=" width: 90%; padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center padding-block">
+                    <h5 class=" pt-6">On-Premises:</h5>
+                    <p class="pt-6 p-solutions">Applications on servers and infrastructure physically located in your office</p>
+                </div>
+                <div class=" pt-6 pb-6 padding-block center">
+                    <a routerLi nk="" class=" width: 90%;">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Hybrid</h5>
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Uses a combination of private infrastructure and public cloud network</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="offers">
+        <h2 class="h2-offers text-center">
+            Video conferencing bridges and connectors
+        </h2>
+        <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">
+            Video conferencing bridges connect different systems together in one meeting. Participants are connected in a single virtual meeting room, regardless of the system they use or the location from which they join.
+        </p>
+        <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">
+            Bridges and connectors enable all video meeting participants to join the meeting, see and hear everyone, and share content. Proscene works with well-known video conference bridge service providers including Poly, and Pexip. We help ensure all participants can join the meeting and collaborate, whether they join from a room system or via a cloud application.
+        </p>
+
+    </div> 
+    
+    <div class="solutions1">
+        <div class="cards-solutions">
+            <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                <div class="words">
+                    <h5 class=" pt-6 width: 90%; padding-block">Learn More</h5>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Logitech solutions></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Microsoft solutions ></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Neat solutions ></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Poly solutions ></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">QSYS solutions ></a>
+                </div>
+                <div class="pb-9"><a routerLink="" class="demo-button">See all partners</a></div>
+               
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                <div class="words padding-block">
+                    <h5 class=" pt-6">Shop Now</h5>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Poly studio ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Cisco webex board ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Microsoft teams' ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Crestron Air Media' ></a>
+                </div>
+                <div class="pb-9"><a routerLink="" class="demo-button">Shop all hardware</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="explanation-after">
+        <h2 class="h2-offers">
+            Support & maintenance for meeting solutions
+        </h2>
+        <p class="pt-6 width: 90%; padding-block p-solutions">Once your video conferencing meeting rooms are up and running, Proscene can help you monitor and manage your meeting rooms and devices. Our digital workplace support services include:</p>
+        <div class=" pt-1 pb-1 ">
+            <a routerLink="" class="padding-block">Training programs ></a>
+        </div><div class=" pt-1 pb-1 ">
+            <a routerLink="" class="padding-block">Maintenance and repair ></a>
+        </div><div class=" pt-1 pb-1 ">
+            <a routerLink="" class="padding-block">Implementation planning and support ></a>
+        </div><div class=" pt-1 pb-1 ">
+            <a routerLink="" class="padding-block">Dedicated on-site support ></a>
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Let us help guide your meeting solutions roadmap
+    </h2>
+    <div class="pb-9 center pt-6"><a routerLink="/contact-us" class="demo-button">contact us</a></div>
+    <div class="sub">
+        <h2 class="h2-offers center" style="color: white;">
+            Subscribe to our newsletter
+        </h2>
+    
+    <div class="pt-7 center">
+        
+        <form action="" class="form">
+            <input type="email" name="email" id="" placeholder="Enter your email.">
+            <a routerLink="" class="a-1">Notify</a>
+        </form>
+    </div>
+    </div>
+    <div class="flex1">
+        <div class="images images-back3">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Latest products and innovations from Proscene
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+                easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
+                to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Contact us!
+    </h2>
+        <app-contactform class="pb-9"></app-contactform>
+    <app-footer></app-footer>
+</div>
