--- a/src/app/modules/solutions/law/law.component.html
+++ b/src/app/modules/solutions/law/law.component.html
@@ -1,1 +1,199 @@
-<p>law works!</p>
+<div class="body">
+    <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <h1 class="hero-title pb-3">Secure, reliable audio visual communications solutions for law firms.</h1>
+                <p class="hero-p2 header-p pt-2">
+                    Equip your law firm with modern AV and UCC technologies
+                </p>
+                <a routerLink="" class="demo-button">Explore</a>
+            </div>
+            <img src="https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Let our certified experts plan, deploy, and operate your conferencing technology.
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Proscene's audiovisual (AV) and unified communications and collaboration (UCC) technology services help your law firm equip spaces with quality technologies that support time-sensitive, high-value legal work. Our teams can help you:
+            </p>
+                <ul>
+                    <li> > Equip your spaces with modern UCC technologies.</li>
+                    <li> > Meet security and compliance requirements.</li>
+                    <li> > Ensure your technology continues to run efficiently.</li>
+                </ul>
+            <div class=" pt-6 pb-6">
+                <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">contact us
+                    ></a>
+            </div>
+
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Benefits to your firm
+    </h2>
+    <div class="wordsdigital">
+        <div class="cardd">
+            <ul>
+                <li>> Improve reliability and user experience.</li>
+                <li>> Meet client needs with compatible technologies.</li>
+                <li>> Enhance your reputation with modern tools and capabilities.</li>
+                <li>> Attract and retain top legal talent with modern and efficient tools.</li>
+                <li>> Achieve regulatory compliance and secure client information.</li>
+            </ul>
+        </div>    
+            <div class="cardd">
+                <ul>
+                    <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
+                    <li>> Managed services keep tools running as expected.</li>
+                    <li>> Standardize solutions to support growth and ease of use.</li>
+                    <li>> Enable interoperability between cloud-based UC platforms.</li>
+                    
+                </ul>
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Full-service offers
+        </h2> 
+        <div class="flex1">
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Let Proscene's production team create your content
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    You can create and manage your digital signage content if you have creative resources available. Keep in mind that high-quality content must be created to display correctly on displays of assorted sizes and screen orientations
+                </p>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
+                </p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
+                        ></a>
+                </div>
+
+            </div>
+            <div class="images images-back11">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+        <div class="flex1">
+            <div class="images images-back2">
+                <img src="" alt="" srcset="">
+            </div>
+
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Signage content and viewer analytics
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Effective digital signage campaigns need consistently fresh content, tracking, and technology support. Proscene provides complete solutions to help you boost engagement and drive sales.
+                </p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Explore digital signage content
+                        ></a>
+                </div>
+
+            </div>
+        </div>
+        
+        <div class="solutions1">
+            <div class="cards-solutions">
+                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
+                        Learn more
+                    </h2>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+                        Learn more about digital signage and video wall solutions.
+                    </p>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Sharp NEC Display Solutions ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">LG Electronics ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Samsung ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Sony ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Peerless-AV ></a>
+                    </div>
+                    <div class="pb-9"><a routerLink="" class="demo-button">See all tech partners</a></div>
+
+                </div>
+            </div>
+            <div class="cards-solutions">
+                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
+                        Shop now
+                    </h2>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions ">
+                        Shop for digital signage and video wall displays.
+                    </p>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions 55” LED 3×3 Video Wall Bundle ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">LG Electronics 75” Non-Glare HD Display ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Barco Unisee 55″ bezel-less tiled LCD video wall' ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Samsung 85” 4K UHD Commercial Display ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions MultiSync® LCD 55” Video Wall Display ></a>
+                    </div>
+                    <div class="pb-9"><a routerLink="" class="demo-button">Shop our catalog hardware</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="sub">
+            <h2 class="h2-offers center" style="color: white;">
+                Subscribe to our newsletter
+            </h2>
+
+            <div class="pt-7 center">
+
+                <form action="" class="form">
+                    <input type="email" name="email" id="" placeholder="Enter your email.">
+                    <a routerLink="" class="a-1">Notify</a>
+                </form>
+            </div>
+        </div>
+        <div class="flex1">
+            <div class="images images-back3">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Latest products and innovations from Proscene
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts
+                    can be
+                    simplified using visual aids, making them
+                    easier for young learners to understand. Our solutions can provide clear, concise visual
+                    demonstrations
+                    to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Contact us!
+        </h2>
+        <app-contactform class="pb-9"></app-contactform>
+        <app-footer></app-footer>
+    </div>
