--- a/src/app/modules/solutions/digital/digital.component.html
+++ b/src/app/modules/solutions/digital/digital.component.html
@@ -1,1 +1,228 @@
-<p>digital works!</p>
+<div class="body">
+    <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <h1 class="hero-title pb-3">Digital signage, video walls, and interactive experiences.</h1>
+                <p class="hero-p2 header-p pt-2">
+                    Communication is key, and digital signage is the easiest and most engaging way to connect with your
+                    audience and create a “wow” factor. Proscene offers digital signage, interactive experiences, and
+                    video wall solutions to grow sales and boost customer and employee engagement
+                </p>
+                <a routerLink="" class="demo-button">Explore</a>
+            </div>
+            <img src="/assets/Digital.jpg" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="picturesdigital">
+        <div class="imgd imgd1"></div>
+        <div class="imgd imgd2"></div>
+        <div class="imgd imgd3"></div>
+        <div class="imgd imgd4"></div>
+    </div>
+    <div class="wordsdigital">
+
+        <div class="cardd">
+            <h2 class="h2-offers">
+                Digital signage goals
+            </h2>
+            <div class=" pt-1 pb-1 ">
+                <a class="padding-block">Increase sales ></a>
+            </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Educate and inform customers or employees ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Deliver wow factor entertainment ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Offer an interactive customer experience ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Support brand messaging ></a>
+                </div>
+        </div>    
+            <div class="cardd">
+                <h2 class="h2-offers">
+                    Digital signage applications
+                </h2>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Wayfinding (touchless or interactive) ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Guest Registration Services ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Environmental Sensor Integration ></a>
+                </div>
+                <div class=" pt-1 pb-1 ">
+                    <a class="padding-block">Room Scheduling ></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex1">
+            <div class="images images-back1">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Large format displays
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                   The proscene team uses high-definition large format displays to build your digital signage applications. Leverage the latest LCD and LED technology to deliver vivid, memorable messages..</p>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
+                </p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
+                        ></a>
+                </div>
+
+            </div>
+        </div>
+        <div class="explanation-after">
+            <h2 class="h2-offers pl-2">
+                Video wall display considerations
+            </h2>
+            <p class="pt-6 width: 90%; padding-block p-solutions">Video wall display options include bezel-less screens that deliver near seamless designs. When building your video wall, considerations include: your budget, the environment where video walls will be used, lighting, ventilation needs, installation requirements, and the field of view</p>
+            <p class="pt-6 width: 90%; padding-block p-solutions">Indoor and outdoor video walls are built with appropriate screen resolution and brightness.</p>
+            
+        </div>
+        <div class="flex1">
+
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Let Proscene's production team create your content
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    You can create and manage your digital signage content if you have creative resources available. Keep in mind that high-quality content must be created to display correctly on displays of assorted sizes and screen orientations
+                </p>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
+                </p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
+                        ></a>
+                </div>
+
+            </div>
+            <div class="images images-back11">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+        <div class="flex1">
+            <div class="images images-back2">
+                <img src="" alt="" srcset="">
+            </div>
+
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Signage content and viewer analytics
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Effective digital signage campaigns need consistently fresh content, tracking, and technology support. Proscene provides complete solutions to help you boost engagement and drive sales.
+                </p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Explore digital signage content
+                        ></a>
+                </div>
+
+            </div>
+        </div>
+        
+        <div class="solutions1">
+            <div class="cards-solutions">
+                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
+                        Learn more
+                    </h2>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+                        Learn more about digital signage and video wall solutions.
+                    </p>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Sharp NEC Display Solutions ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">LG Electronics ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Samsung ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Sony ></a>
+                    </div>
+                    <div class=" pt-6 pb-6">
+                        <a routerLink="" class="width: 90%; padding-block">Peerless-AV ></a>
+                    </div>
+                    <div class="pb-9"><a routerLink="" class="demo-button">See all tech partners</a></div>
+
+                </div>
+            </div>
+            <div class="cards-solutions">
+                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
+                        Shop now
+                    </h2>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions ">
+                        Shop for digital signage and video wall displays.
+                    </p>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions 55” LED 3×3 Video Wall Bundle ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">LG Electronics 75” Non-Glare HD Display ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Barco Unisee 55″ bezel-less tiled LCD video wall' ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Samsung 85” 4K UHD Commercial Display ></a>
+                    </div>
+                    <div class=" pt-6 pb-6 padding-block">
+                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions MultiSync® LCD 55” Video Wall Display ></a>
+                    </div>
+                    <div class="pb-9"><a routerLink="" class="demo-button">Shop our catalog hardware</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="sub">
+            <h2 class="h2-offers center" style="color: white;">
+                Subscribe to our newsletter
+            </h2>
+
+            <div class="pt-7 center">
+
+                <form action="" class="form">
+                    <input type="email" name="email" id="" placeholder="Enter your email.">
+                    <a routerLink="" class="a-1">Notify</a>
+                </form>
+            </div>
+        </div>
+        <div class="flex1">
+            <div class="images images-back3">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Latest products and innovations from Proscene
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts
+                    can be
+                    simplified using visual aids, making them
+                    easier for young learners to understand. Our solutions can provide clear, concise visual
+                    demonstrations
+                    to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Contact us!
+        </h2>
+        <app-contactform class="pb-9"></app-contactform>
+        <app-footer></app-footer>
+    </div>
